--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ source-code: https://github.com/phdhrepository/PHDocumentaryHeritage
 #
 # title of site appears in banner
 #title: CollectionBuilder-GH 
-title: Philippine Documentary Heritage 
+#title: Philippine Documentary Heritage 
 # tagline, a short phrase that will appear throughout the site in the top banner
 # tagline: a template for creating simple digital exhibits
-tagline: Digitial Repository on the COVID-19 Pandemic
+#tagline: Digitial Repository on the COVID-19 Pandemic
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 # description: "CollectionBuilder-GH is a template for creating small digital collection exhibits on GitHub Pages designed for teaching digital library skills"
