--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ source-code: https://github.com/phdhrepository/PHDocumentaryHeritage
 #
 # title of site appears in banner
 #title: CollectionBuilder-GH 
-title: PHDH Repository
+title: 
 # tagline, a short phrase that will appear throughout the site in the top banner
 # tagline: a template for creating simple digital exhibits
 tagline: 
